LISP/src/reader/Reader.java
/* Generated By:JavaCC: Do not edit this line. Reader.java */
package reader;
import ClassExp.*;
import java.io.*;

public class Reader implements ReaderConstants {
 public static void main(String args []){
                        try {
                        Contexte.cont.ajouter("quote", Quote.quote);
                                Contexte.cont.ajouter("cdr", Cdr.cdr);
                                Contexte.cont.ajouter("car", Car.car);
                                Contexte.cont.ajouter("cons", Cons.cons);
                                SExpr exp = read();
                                System.out.println(exp);
                                System.out.println(exp.eval());
                        } catch (LispException e) {
                                // TODO Auto-generated catch block
                                e.printStackTrace();
                        }
          }

        protected static java.io.Reader in = new BufferedReader(new InputStreamReader(System.in));

    /** lecture d'une SEXPR depuis la console
	* @return Sexpr : la SEXPR construite
	* @throws LispException (= une erreur dans la commande)
	*/
        public static SExpr read() throws LispException {
                Reader parser = new Reader(in);
                SExpr tmp=null;
                try
            {
              tmp = parser.SEXPR_init();
            }
                catch (ParseException e)
                {
                  System.out.println(e.getMessage());
                }
                return tmp;
                };

        /** lecture d'une SEXPR à partir d'une chaîne
	* @param s : la chaîne
	* @return Sexpr : la SEXPR construite.
	* @throws LispException (= une erreur dans la commande)
	*/

        public static SExpr read(String s) throws LispException{
          InputStream in = new ByteArrayInputStream(s.getBytes());
                        Reader parser = new Reader (in);
                        SExpr tmp=null;
                        try
                    {
                      tmp = parser.SEXPR_init();
                    }
                        catch (ParseException e)
                        {
                          System.out.println(e.getMessage());
                        }
                        return tmp;

        };

        /** Lecture à partir d'un fichier
	* @param s : le nom du fichier d'entrée
	* @return Sexpr : le résultat de l'évaluation
	* @throws LispException (= une erreur dans la commande)
	*/

        public static SExpr importe(String s) throws LispException
        {
          FileReader reader;
        int car=0;
        int i=0;
        char donnee []=null;
        String chaine=null;

                try {
                  reader = new FileReader(s);
            while (car != -1) {
                car = reader.read();
                if (car != -1) {
                    donnee[i] =  (char) car;
                    i++;
                }
            }
            chaine = new String (donnee);
            reader.close();
        } catch (FileNotFoundException e) {
            System.out.println( "Fichier introuvable "
                                    +s);
        } catch (IOException e) {
            System.out.println("Erreur dans la lecture");
        }
        return read(chaine);
        };

  final public SExpr SEXPR_init() throws ParseException {
 SExpr s1;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SYMBOL:
      case PARO:
      case QUOTE:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      s1 = SEXPR();
            {if (true) return s1;}
    }
    throw new Error("Missing return statement in function");
  }

  final public SExpr SEXPR() throws ParseException {
                          SExpr s2;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYMBOL:
      s2 = ATOME();
                      {if (true) return s2;}
      break;
    case PARO:
      jj_consume_token(PARO);
      s2 = LISTE();
      jj_consume_token(PARF);
                                     {if (true) return s2;}
      break;
    case QUOTE:
      jj_consume_token(QUOTE);
      s2 = SEXPR();
                                 {if (true) return new SCons (new Symbole("quote"), s2);}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public SExpr LISTE() throws ParseException {
                         SExpr s2,s3;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SYMBOL:
    case PARO:
    case QUOTE:
      s2 = SEXPR();
      s3 = FINLISTE();
                                            {if (true) return new SCons(s2,s3);}
      break;
    default:
      jj_la1[2] = jj_gen;
                   {if (true) return NIL.nil;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Atome ATOME() throws ParseException {
                         Token sym;
    sym = jj_consume_token(SYMBOL);
                                {if (true) return new Symbole(sym.image);}
    throw new Error("Missing return statement in function");
  }

  final public SExpr FINLISTE() throws ParseException {
                            SExpr s4,s5;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case POINT:
      jj_consume_token(POINT);
      s4 = SEXPR();
                              {if (true) return s4;}
      break;
    case SYMBOL:
    case PARO:
    case QUOTE:
      s4 = SEXPR();
      s5 = FINLISTE();
                                    {if (true) return new SCons(s4,s5);}
      break;
    default:
      jj_la1[3] = jj_gen;
           {if (true) return NIL.nil;}
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public ReaderTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[4];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x0,0x0,0x0,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x1600,0x1600,0x1600,0x1700,};
   }

  /** Constructor with InputStream. */
  public Reader(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Reader(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ReaderTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Reader(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ReaderTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Reader(ReaderTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(ReaderTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[45];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 4; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 45; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
